<resources>
    <string name="check" translatable="false">체크</string>
    <string name="attendance" translatable="false">출석</string>
    <string name="message" translatable="false">메시지</string>
    <string name="id" translatable="false">아이디</string>
    <string name="app_name">SKU스마트출석</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="phonnumber" translatable="false">전화번호</string>
    <string name="login">로그인</string>
    <string name="topname">성결대학교 창의인재 프로젝트</string>
    <string name="savephonnumber">전화번호 저장</string>
    <string name="login2">로그인</string>
    <string name="notice">전화번호 저장시 개인정보유출에 유의해 주세요!</string>
    <string name="admistrator">관리자 모드</string>
</resources>
