<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layer_background3">

            <androidx.appcompat.widget.Toolbar
                android:titleTextColor="@android:color/black"
                android:subtitleTextColor="@android:color/black"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:elevation="8dp"
            android:translationZ="6dp"
            android:backgroundTint="@color/white"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
        <TextView
            android:textStyle="bold"
                android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:maxLines="1" />

            </androidx.appcompat.widget.Toolbar>

        <GridLayout

            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="0dp"
            android:layout_marginEnd="-5dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="87dp"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:paddingTop="50dp"
            android:rowCount="2"
            android:useDefaultMargins="true"
            tools:ignore="MissingConstraints">

            <!-- Horizontal dividing line -->

            <!-- Vertical dividing line -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/circle_background">

                    <ImageButton
                        android:id="@+id/check"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:background="@color/sky"
                        android:contentDescription="@string/check"
                        android:scaleType="centerInside"
                        android:src="@drawable/check" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="출석"
                    android:textColor="@color/sky"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/circle_background">

                    <ImageButton
                        android:id="@+id/attendance"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:background="@color/sky"
                        android:contentDescription="@string/attendance"
                        android:scaleType="centerInside"
                        android:src="@drawable/attendance" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="출석체크"
                    android:textColor="@color/sky"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/circle_background">

                    <ImageButton
                        android:id="@+id/message"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:background="@color/sky"
                        android:contentDescription="@string/message"
                        android:scaleType="centerInside"
                        android:src="@drawable/message" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="쪽지"
                    android:textColor="@color/sky"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/circle_background">

                    <ImageButton
                        android:id="@+id/id"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:background="@color/sky"
                        android:contentDescription="@string/id"
                        android:scaleType="centerInside"
                        android:src="@drawable/id" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="모바일신분증"
                    android:textColor="@color/sky"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </GridLayout>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>